--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             </ul>
         </nav>
     </header>
+
+  <main>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -47,6 +49,8 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
+  
+
     </div>
     <div class="benefits">
         <div class="benefit-lead">
@@ -70,6 +74,8 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
+  <main>
+
     </div>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
@@ -77,6 +83,6 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
-</body>
 
+</body>
 </html>
