--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </header>
 
   <main>
+<!--THis hero thing is the image, so add an image tag and image caption-->
     <div class="hero"></div>
+
+
     <div class="content">
 
         <article class="search-engine-optimization">
@@ -52,10 +55,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-  
-
     </div>
-    <div class="benefits">
+
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -77,6 +79,9 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
+    </aside>
+
+
   <main>
 
     </div>
