--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero"></div>
 
 
-    <div class="content">
+    <section class="content">
 
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -55,7 +55,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </div>
+    </section>
 
     <aside class="benefits">
         <div class="benefit-lead">
