added a background image by using main::before to keep the code tidy

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -26,12 +27,9 @@
     </header>
 
   <main>
-<!--THis hero thing is the image, so add an image tag and image caption-->
-    <div class="hero"></div>
-
-
+<!--The background image was inserted via the pseudo element "main::before"-->
+   
     <section class="content">
-
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -81,8 +79,7 @@
         </div>
     </aside>
 
-
-  <main>
+</main>
 
     </div>
     <footer>
