--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     </header>
 
   <main>
+
 <!--The background image was inserted via the pseudo element "main::before"-->
    
+<!--need to add image descriptions to each of the images that relate to the articles-->
+
     <section class="content">
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -55,22 +58,24 @@
         </article>
     </section>
 
+<!-- still have to figure out what to do with the divs in the aside-->
+
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
