--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="optimization-management-marketing">
+        <article class="optimization-management-marketing">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="optimization-management-marketing">
+        <article class="optimization-management-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
