removed uneeded section and aside classes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    
 <!--need to add image descriptions to each of the images that relate to the articles-->
 
-    <section class="content">
+    <section>
         <article class="optimization-management-marketing">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -60,7 +60,7 @@
 
 <!-- still have to figure out what to do with the divs in the aside-->
 
-    <aside class="benefits">
+    <aside>
         <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
