--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!--need to add image descriptions to each of the images that relate to the articles-->
 
     <section>
-        <article class="optimization-management-marketing">
+        <article id="search-engine-optimization" class="optimization-management-marketing">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -41,7 +41,7 @@
             </p>
         </article>
 
-        <article class="optimization-management-marketing">
+        <article id="online-reputation-management" class="optimization-management-marketing">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
             </p>
         </article>
 
-        <article class="optimization-management-marketing">
+        <article id="social-media-marketing" class="optimization-management-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
