added some notes to the css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon social Solutions</title>
+    <title>Horiseon Social Solutions</title>
 </head>
 
 <body>
@@ -29,8 +29,6 @@
   <main>
 
 <!--The background image was inserted via the pseudo element "main::before"-->
-   
-<!--need to add image descriptions to each of the images that relate to the articles-->
 
     <section>
         <article id="search-engine-optimization" class="optimization-management-marketing">
@@ -88,9 +86,12 @@
 
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+        <small>
+            <p>
+                &copy; 2019 Horiseon Social Solution Services, Inc.
+            </p>
+        </small>
+
     </footer>
 
 </body>
